--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
   <p>You educational project can be done at a very ease price and affordable to you, with the  potential of an appreciative remark</p>
 </div>
 
-<button style="padding-bottom: 6%;" class="tablink tweb" onclick="displayer(0, this, 'web', 'tweb')" >Web Design</button>
+<button class="tablink tweb" onclick="displayer(0, this, 'web', 'tweb')" >Web Design</button>
 <button class="tablink tres" onclick="displayer(1, this, 'res', 'tres')">Responsive Design</button>
 <button class="tablink tbus" onclick="displayer(2, this, 'bus', 'tbus')">Business plan</button>
 <button class="tablink tedu" onclick="displayer(3, this, 'edu', 'tedu')">Eduational ProJect</button>
